[package]
name = "orca_clmm_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Все solana-* версии должны совпадать
solana-client       = "2.2.7"
solana-sdk = "2.2"

# Orca Whirlpools SDK
orca_whirlpools_client      = "3.0"

# Асинхронный рантайм и ошибки
tokio                     = { version = "1", features = ["full"] }
anyhow                    = "1.0"
borsh = "1.5.7"
reqwest = { version = "0.12.19", features = ["json"] }
serde_json = "1.0"
spl-token = "8.0.0"
tracing = "0.1.41"
serde = "1.0.219"
hyperliquid_rust_sdk = "0.6.0"
ethers = { version = "2", features = ["abigen","eip712"] }
uuid = "1.17.0"
# [[bin]]
# name = "test"
# path = "test.rs"