[package]
name = "orca_clmm_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Все solana-* версии должны совпадать
solana-client       = "2.2.7"
solana-sdk = "2.2"

# Orca Whirlpools SDK
orca_whirlpools_client      = "3.0"

# Асинхронный рантайм и ошибки
tokio                     = { version = "1", features = ["full"] }
anyhow                    = "1.0"
borsh = "1.5.7"
reqwest = { version = "0.12.19", features = ["json"] }
serde_json = "1.0"
spl-token = "8.0.0"
tracing = "0.1.41"
serde = "1.0.219"
hyperliquid_rust_sdk = "0.6.0"
ethers = { version = "2", features = ["abigen","eip712"] }
uuid = "1.17.0"
spl-associated-token-account = "7.0.0"
solana-program = "2.2.1"
base64 = "0.22"
bincode = "1.3.0"
rand = "0.9.1"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
solana-account-decoder = "2.2.7"
solana-program-option = "2.2.1"
arrayref = "0.3.9"
uint = "0.10.0"
orca_whirlpools = "3.1.0"
orca_tx_sender = "2.0.1"
orca_whirlpools_core = "2.0.0"
futures = "0.3.31"
chrono = "0.4.41"
log = "0.4"
env_logger = "0.11.8"
ta = "0.4"

# [[bin]]
# name = "test"
# path = "test.rs"